# bazel-angular-spring-demo

./: .gitignore  MODULE.bazel  README.md  angular.json  bazel-bazel-angular-spring-demo  bazel-bin  bazel-out  bazel-testlogs
back/: BUILD.bazel
back/src/main/java/com/example/demo/: CorsConfig.java  HelloController.java
back/src/main/java/com/example/demo/adapters/web/: HelloController.java
back/src/main/java/com/example/demo/config/: CorsConfig.java
back/src/main/java/com/example/demo/users/: UserController.java  UserStore.java
back/src/main/resources/spec/: openapi.yaml
back/src/test/java/com/example/demo/: HelloControllerTest.java
back/src/test/java/com/example/demo/adapters/web/: HelloControllerTest.java
front/: BUILD.bazel  angular.json  package.json  pnpm-lock.yaml  proxy.conf.json
front/src/: index.html  main.ts  styles.css
front/src/app/: app.component.ts  app.routes.ts
front/src/app/features/users/: users.routes.ts
front/src/app/features/users/data-access/: tracking.service.ts  users.service.ts
front/src/app/features/users/pages/users-create/: users-create.component.css  users-create.component.ts
front/src/app/features/users/pages/users-detail/: users-detail.component.css  users-detail.component.html  users-detail.component.ts
front/src/app/features/users/pages/users-layout/: users-layout.component.css  users-layout.component.html
front/src/app/features/users/pages/users-list/: users-list.component.html  users-list.component.ts
front/src/app/features/users/pages/users-search/: users-search.component.css  users-search.component.ts
front/src/app/features/users/pages/users-selected/: users-selected.component.css  users-selected.component.html  users-selected.component.ts
front/src/app/pages/about/: about.component.css  about.component.html  about.component.ts
front/src/app/pages/home/: home.component.css  home.component.html  home.component.ts
front/src/app/pages/users/users-create/: users-create.component.html  users-create.component.ts
front/src/app/pages/users/users-detail/: users-detail.component.ts
front/src/app/pages/users/users-layout/: users-layout.component.ts
front/src/app/pages/users/users-list/: users-list.component.css  users-list.component.ts
front/src/app/pages/users/users-search/: users-search.component.html  users-search.component.ts
front/src/app/pages/users/users-selected/: users-selected.component.ts
front/src/app/services/: api.service.ts  user-selection.service.ts  users.service.ts
front/src/environments/: environment.ts
front/tools/: ng.js
microservicios/users/: BUILD.bazel
microservicios/users/src/main/java/com/app/stack/adapters/web/: UserController.java
microservicios/users/src/main/java/com/app/stack/config/: CorsConfig.java
microservicios/users/src/main/java/com/app/stack/users/application/: UserService.java  UserUseCase.java
microservicios/users/src/main/java/com/app/stack/users/application/port/: UserRepository.java  UserUseCasePort.java
microservicios/users/src/main/java/com/app/stack/users/domain/: PageRequest.java  SortDirection.java  User.java  UserCreateData.java  UserPage.java  UserRepository.java  UserStatus.java  UserUpdateData.java
microservicios/users/src/main/java/com/app/stack/users/domain/entities/: PageRequest.java  SortDirection.java  User.java  UserPage.java  UserStatus.java
microservicios/users/src/main/java/com/app/stack/users/domain/errors/: DomainErrorCode.java  DomainException.java
microservicios/users/src/main/java/com/app/stack/users/domain/services/: UserService.java
microservicios/users/src/main/java/com/app/stack/users/infrastructure/: InMemoryUserRepository.java  JpaUserRepository.java  UserEntity.java  UserEntityRepository.java  UserSpecifications.java
microservicios/users/src/main/java/com/app/stack/users/infrastructure/config/: UsersConfiguration.java
microservicios/users/src/main/java/com/app/stack/users/infrastructure/persistence/: JpaUserRepositoryAdapter.java  UserEntity.java  UserEntityRepository.java  UserPersistenceException.java  UserPersistenceMapper.java  UserSpecifications.java
microservicios/users/src/main/java/com/app/stack/users/infrastructure/persistence/entities/: UserEntity.java
microservicios/users/src/main/java/com/app/stack/users/infrastructure/persistence/mappers/: UserPersistenceMapper.java
microservicios/users/src/main/java/com/app/stack/users/infrastructure/persistence/repositories/: JpaUserRepositoryAdapter.java  UserEntityRepository.java  UserPersistenceException.java  UserSpecifications.java
microservicios/users/src/main/java/com/app/stack/users/infrastructure/web/: CorsConfig.java  DomainErrorHttpMapping.java  UserApiMapper.java  UserController.java  UserErrorHandler.java
microservicios/users/src/main/java/com/app/stack/users/infrastructure/web/config/: Config.java
microservicios/users/src/main/java/com/app/stack/users/infrastructure/web/controllers/: UserController.java
microservicios/users/src/main/java/com/app/stack/users/infrastructure/web/handlers/: DomainErrorHttpMapping.java  (+1 more)
microservicios/users/src/main/java/com/example/demo/adapters/web/: UserController.java
microservicios/users/src/main/java/com/example/demo/users/application/: UserService.java
microservicios/users/src/main/java/com/example/demo/users/domain/: UserRepository.java
microservicios/users/src/main/java/com/example/demo/users/infrastructure/: InMemoryUserRepository.java
microservicios/users/src/main/resources/: application.yml
microservicios/users/src/main/resources/db/changelog/: db.changelog-master.yaml  normalize-user-status.sql  rollback-normalize-user-status.sql  rollback-seed-users.sql  seed-users.sql
microservicios/users/src/main/resources/spec/: openapi.yaml
microservicios/users/src/test/java/com/app/stack/: ApplicationTest.java
microservicios/users/src/test/java/com/app/stack/users/application/: UserUseCaseTest.java
microservicios/users/src/test/java/com/app/stack/users/domain/services/: UserServiceTest.java
microservicios/users/src/test/java/com/example/demo/: ApplicationTest.java
(+81 files in other folders)
