java_library(
    name = "app_lib",
    srcs = glob(["src/main/java/**/*.java"]),
    deps = [
        "@maven//:org_springframework_boot_spring_boot",
        "@maven//:org_springframework_boot_spring_boot_autoconfigure",
        "@maven//:org_springframework_boot_spring_boot_starter_web",
        "@maven//:org_springframework_spring_context",
        "@maven//:org_springframework_spring_web",
        "@maven//:org_springframework_spring_webmvc",
    ],
)

java_binary(
    name = "server",
    main_class = "com.example.demo.DemoApplication",
    runtime_deps = [":app_lib"],
)

java_test(
    name = "app_test",
    srcs = glob(["src/test/java/**/*.java"]),
    test_class = "com.example.demo.HelloControllerTest",
    deps = [
        ":app_lib",
        "@maven//:junit_junit",
    ],
)
